<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300sp"
    android:layout_height="300sp"
    android:alpha="1"
    android:background="#2E2C2A"
    android:clickable="false">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/Hinweis_Title"
        android:textColor="@color/colorText"
        android:fontFamily="sans-serif-black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="232dp"
        android:gravity="center"
        android:text="@string/Drive"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/haftungsausschluss"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>