<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="#2E2C2A"
    android:clickable="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_logo"
        android:layout_width="606dp"
        android:layout_height="795dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:alpha="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/logo300" />

    <TextView
        android:id="@+id/title"
        android:layout_width="187dp"
        android:layout_height="44dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="Kalkohol"
        android:textColor="#C1B01D"
        android:textSize="36sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="67dp"
        android:layout_height="28dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="Profil:"
        android:textColor="#C1B01D"
        android:textSize="22sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/profile_data"
        android:layout_width="236dp"
        android:layout_height="26dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/profile_name"
        android:textColor="#C1B01D"
        android:textSize="22sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/current_state_data"
        android:layout_width="150dp"
        android:layout_height="84dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/current_state_data"
        android:textAllCaps="false"
        android:textColor="#C1B01D"
        android:textSize="52dp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/current_state_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/time_data"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/time_data"
        android:textAllCaps="false"
        android:textColor="#C1B01D"
        android:textSize="30sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_title"
        app:layout_constraintTop_toBottomOf="@+id/current_state_title"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/current_state_title"
        android:layout_width="156dp"
        android:layout_height="58dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="Aktuell:"
        android:textColor="#C1B01D"
        android:textSize="38dp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:id="@+id/time_title"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_time"
        android:textColor="#C1B01D"
        android:textSize="20sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_state_title"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="96dp"
        android:layout_height="87dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo300" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="53dp" />

    <Button
        android:id="@+id/btn_user"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/btn_show_more"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_state_title" />

    <TableLayout
        android:layout_width="349dp"
        android:layout_height="424dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:baselineAligned="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_title">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="304dp"
            android:layout_height="66dp">

            <TextView
                android:id="@+id/title_bier"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:clickable="true"
                android:fontFamily="sans-serif-black"
                android:text="Bier:"
                android:textColor="#C1B01D"
                android:textSize="32dp"
                android:typeface="normal"
                android:visibility="visible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/logo3"
                android:layout_width="63dp"
                android:layout_height="71dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logo300" />

            <ImageView
                android:id="@+id/logo6"
                android:layout_width="63dp"
                android:layout_height="71dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logo300" />

            <ImageView
                android:id="@+id/logo7"
                android:layout_width="63dp"
                android:layout_height="71dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logo300" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="32dp" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>